adding the color varibeles

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,10 +11,10 @@
 @import "base/utilities";
 
 //components
-@import "components";
+@import "components/button";
 
 //layout
-@import "import";
+@import "layout/header";
 
 //page
 @import "pages/home";   
