--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,3 +10,13 @@ $color-text-light: #f9f7f6;
 //GRÅ
 $color-grey-bg: #f9f7f6;
 $color-grey: #aaa;
+
+//SORT
+$color-black: #000000;
+
+//DEFAULT FONT-SIZE
+$default-font-size: 1.6rem;
+
+//GRID
+$grid-width: 100%;
+$gutter-horizontal: 6rem;
