--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     color: #f9f7f6;
     display: block;
     font-size: 3.5rem;
-    letter-spacing: 1.5rem;
+    letter-spacing: .8rem;
     white-space: nowrap; }
   .heading-primary--sub {
     display: block;
@@ -49,8 +49,21 @@ body {
     color: #404040;
     display: block;
     font-size: 3.5rem;
-    letter-spacing: 1.5rem; }
+    letter-spacing: .3rem; }
   .heading-tetriary--sub {
+    color: #404040;
+    display: block;
+    font-size: 3.5rem;
+    letter-spacing: 1.5rem; }
+
+.heading-quad {
+  backface-visibility: hidden; }
+  .heading-quad--main {
+    color: #404040;
+    display: block;
+    font-size: 3.5rem;
+    letter-spacing: .3rem; }
+  .heading-quad--sub {
     color: #404040;
     display: block;
     font-size: 3.5rem;
@@ -80,6 +93,9 @@ body {
 .u-margin-top-huge {
   margin-top: 10rem !important; }
 
+.u-heading-center {
+  text-align: center; }
+
 .section {
   position: relative; }
   .section__main-tekstbox {
@@ -88,16 +104,48 @@ body {
     left: 50%;
     transform: translate(-50%, 0%); }
 
+.citatbox__background {
+  background-color: #0f7d3f;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+.citatbox__paragraph {
+  margin: auto; }
+
+.citatbox__heading {
+  margin: auto; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 1.5rem 4rem;
   display: inline-block;
   margin-top: 2rem; }
 
 .btn--green {
   background-color: #18c965;
-  color: #f9f7f6; }
+  color: #f9f7f6;
+  font-size: 1.4rem;
+  padding: 1.5rem 2rem; }
+
+.btn--transperant {
+  background-color: transparent;
+  color: #404040;
+  font-size: 1.6rem;
+  text-transform: none !important;
+  border-bottom: 2px solid #0f7d3f;
+  margin-left: 1.6rem; }
+
+.cards__photo {
+  width: 100%;
+  height: 53%; }
+
+.cards__paragragph {
+  margin-left: 1.6rem; }
+
+.cards__heading {
+  margin-left: 1.6rem;
+  color: #0f7d3f; }
 
 .header {
   height: 100vh;
@@ -117,14 +165,14 @@ body {
 
 .row {
   max-width: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: .8rem; }
 
 [class^="col-"] {
   float: left; }
   [class^="col-"]:not(:last-child) {
-    margin-right: 6rem; }
+    margin-right: 1.5rem; }
 
 .col-1-of-3 {
-  width: calc((100% - 2 * 6rem) / 3);
-  background-color: indianred;
-  height: 60vh; }
+  width: calc((100% - 2 * 1.5rem) / 3);
+  height: 80vh; }
