--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,9 @@ body {
 .heading-quad {
   backface-visibility: hidden; }
   .heading-quad--main {
-    color: #404040;
+    color: #aaa;
     display: block;
-    font-size: 3.5rem;
+    font-size: 1.5rem;
     letter-spacing: .3rem; }
   .heading-quad--sub {
     color: #404040;
@@ -110,13 +110,42 @@ body {
   justify-content: center; }
 
 .citatbox__paragraph {
-  margin: auto; }
+  margin: auto;
+  color: #f9f7f6; }
 
 .citatbox__heading {
-  margin: auto; }
+  margin: auto;
+  text-align: right; }
+
+.citatbox__photo {
+  width: 15rem;
+  height: 15rem; }
+
+.citatbox__photo--maniplulation {
+  height: 100%;
+  clip-path: circle(40% at 50% 50%); }
 
 .citatbox--centering {
   width: 60%; }
+
+.citatbox__textCentering {
+  text-align: right; }
+
+.nyheder__gridBox {
+  overflow: hidden; }
+
+.nyheder__photo {
+  width: 100%; }
+
+.nyheder__heading {
+  width: 100%;
+  font-size: 2.3rem;
+  color: #0f7d3f;
+  text-decoration: none;
+  font-weight: bold; }
+
+.nyheder__size {
+  height: 100%; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -178,3 +207,13 @@ body {
 .col-1-of-3 {
   width: calc((100% - 2 * 1.5rem) / 3);
   height: 80vh; }
+
+.col-1-of-2 {
+  width: calc((100% - 1.5rem) / 2); }
+
+.col-2-of-3 {
+  width: calc(2 * ((100% - 2 * 1.5rem) / 3) +  1.5rem);
+  height: 60vh; }
+
+.col-1-of-4 {
+  width: calc((100% - 3 * 1.5rem) / 4); }
