--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -20,3 +20,18 @@
   width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
     height:80vh;
 }
+
+.col-1-of-2 {
+  width: calc((100% - #{$gutter-horizontal}) / 2);
+}
+
+.col-2-of-3 {
+  width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) +  #{$gutter-horizontal});
+  height: 60vh;
+}
+
+.col-1-of-4 {
+  width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+  
+}
+
