--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -11,21 +11,57 @@
         background-color: $color-primary-dark;
         display: flex;
         justify-content: center;
+        
     }
 
     &__paragraph {
         margin: auto;
+        color: $color-text-light;
     }
 
     &__heading {
         margin: auto;
+        text-align: right;
     }
 
     &__photo {
-        
+        width: 15rem;
+        height: 15rem;
+    }
+
+    &__photo--maniplulation {
+        height: 100%;
+        clip-path: circle(40% at 50% 50%);
     }
 
     &--centering {
         width: 60%;
+    }
+
+    &__textCentering {
+        text-align: right;
+    }
+}
+
+.nyheder {
+
+    &__gridBox {
+        overflow: hidden;
+    }
+
+    &__photo {
+        width: 100%;
+    }
+
+    &__heading {
+        width: 100%;
+        font-size: 2.3rem;
+        color: $color-primary-dark;
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+    &__size {
+        height: 100%;
     }
 }
